kubernetes/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deplyment
spec:
  replicas: 2
  selector:
    matchLabels:
      run: django-app
  template:
    metadata:
      labels:
        run: django-app
    spec:
      containers:
        - name: django-app
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 80
