kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: NodePort
  selector:
    run: django-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 32133
